userconfig/standard_dotfiles/.init/setup.d/user.sh:   Moved EMAIL setting to .init/Zones/Al/setup.sh
userconfig/standard_dotfiles/.init/setup.d/mail.sh:
  fixed MAIL_ALIASES setting (now dash compliant)

userconfig/standard_dotfiles/.gnomerc:
  added LIBOVERLAY_SCROLLBAR setting to turn off "new style" Gnome scrollbars


git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@83 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.gnomerc
+++ b/.gnomerc
@@ -1,5 +1,6 @@
 # .gnomerc (Bash include file) -- sourced by a Gnome desktop login script
 export X_LOGIN=y
+export LIBOVERLAY_SCROLLBAR=0
 
 . .init/setup.sh
 
