added stuff to debian/hardware.dselect and removed acpid
added stuff to debian/devel.dselect

added stuff to debian/devel_ide.dselect, including xemacs21

added ibritish to debian/basic.dselect

added debian/writing.dselect

added stuff to debian/build_doc.dselect

added unattended-upgrades to debian/sysadmin.dselect

added locate, etc. to debian/cli_useful.dselect

added ncftp to debian/network.dselect

added strace etc. to debian/devel.dselect

added stuff to debian/doc.dselect

added sharutils to debian/cli_extra.dselect

added lots of stuff to debian/sysadmin_doc.dselect

added stuff to debian/coding_doc.dselect and fixed a few things

added link to ubuntu/user_cli.dselect in debian

userconfig/standard_dotfiles/.init/setup.d/bash.sh:
  sets TERM when running dircolors

userconfig/standard_dotfiles/.init/setup.d/user.sh:
  sets GREP_OPTIONS

userconfig/standard_dotfiles/.init/setup.d/user.sh:
  sets DEBEMAIL

userconfig/standard_dotfiles/.init/shellrc.d/useful_aliases.csh:
  'time_t' now uses date instead of perl

userconfig/standard_dotfiles/.init/shellrc.d/completions.tcsh:
  big additions

  removed mutt stuff

added standard_dotfiles/.init/shellrc.d/linux_aliases.csh

userconfig/standard_dotfiles/.gnomerc:
  Avoids sourcing .init/setup.sh if GDMSESSION is set

userconfig/standard_dotfiles/.vim/after/ftplugin/bindzone.vim:
  now uses setlocal to set noexpandtab

added userconfig/standard_dotfiles/.vim/after/ftplugin/sh.vim with
  "setlocal shiftwidth=2"

added standard_dotfiles/.vim/{ftdetect/markdown.vim,after/ftplugin/markdown.vim}
for .mdown

userconfig/standard_dotfiles/.profile:
  split tests for /etc/bash.bashrc sourcing into two levels: non-X and
  Debian-version-prior-to-wheezy

  also sources $HOME/.bashrc in the non-X level

split Internode stuff out of debian/sources.squeeze/sources into
mirror_internode.list
** WARNING: needs /etc/apt/preferences.d/ to set priority

userconfig/standard_dotfiles/.cshrc: no longer does "set savedirs"




git-svn-id:

--- a/.gnomerc
+++ b/.gnomerc
@@ -2,8 +2,12 @@
 export X_LOGIN=y
 export LIBOVERLAY_SCROLLBAR=0
 
-. .init/setup.sh
+## env > tmp/env_`date +%Y-%m-%d`
 
+# Skip initialisation if /etc/gdm/Xsession has already sourced ~/.profile
+if [ -z "$GDMSESSION" ] ; then
+  . .init/setup.sh
+fi
 
 # vim: set filetype=sh :
 ### Local Variables:
