(userconfig/standard_dotfiles)
.init/shellrc.d/completions.tcsh:
  + fixed setting of hosts var
  + better completion for apt-get
  + fixed completion for aptitude so as to put the n/*/... last
  + added missing aptitude commands
  + added completion for getent

.init/shellrc.d/Makefile and
.init/setup.d/tcsh_completions_support.sh:
  allows for services completion for getent


git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@105 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.init/shellrc.d/Makefile
+++ b/.init/shellrc.d/Makefile
@@ -1,8 +1,4 @@
-# Makefile (userconfig/shells) for installing C shell include files into ~
+# Makefile 
 
-DEST=~/.csh
-
-install: *.tcsh
-	if ! grep -q "MARKER:cshrc.snippet" ~/.cshrc ; then cat cshrc.snippet >> ~/.cshrc ; fi
-	install -d $(DEST)
-	install --mode=644 --preserve-timestamps $^ $(DEST)
+~/tmp/services.list: /etc/services
+	awk '/^[a-z]/ { print $$1; if (NF > 2 && $$3 != "#") print $$3; }' $^ |sort|uniq > $@
