--- a/.screenrc
+++ b/.screenrc
@@ -32,8 +32,9 @@ bindkey -k \#4 prev
 bindkey -k %i  next
 
 # == backticks ==
-# generates equivalent of $STY followed by "on $HOST" if $STY is non-standard
-backtick 10 60 60 sh -c 'sty=$(screen -ls | grep --color=no -o "$PPID[^[:space:]]*") ; if [ ${sty##*.} = $HOST ] ; then echo $sty ; else echo "$sty on $HOST" ; fi'
+# Generates equivalent of $STY followed by "on $HOST" if $STY is non-standard.
+# (Checks only the first word of $HOST, in case it's a FQDN.)
+backtick 10 60 60 sh -c 'sty=$(screen -ls | grep --color=no -o "$PPID[^[:space:]]*") ; if [ ${sty##*.} = ${HOST%%.*} ] ; then echo $sty ; else echo "$sty on $HOST" ; fi'
 
 # == hardstatus ==
 hardstatus on
