userconfig/standard_dotfiles/.screenrc:   uses alt instead of shifted right- and left-arrow keys
userconfig/standard_dotfiles/.profile:
  Uses absolute path when sourcing .init/setup.sh


git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@262 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.screenrc
+++ b/.screenrc
@@ -27,10 +27,10 @@ defscrollback 3000
 
 
 # == Keybindings ==
-# shifted left-arrow key
-bindkey -k \#4 prev
-# shifted right-arrow key
-bindkey -k %i  next
+# alt left-arrow key
+bindkey ^[[1;3D prev
+# alt right-arrow key
+bindkey ^[[1;3C next
 
 
 # == backticks ==
