userconfig/standard_dotfiles/.screenrc: Removed broken Notification for copy mode
Added */cloud.txt with usernames for various providers



git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@338 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.screenrc
+++ b/.screenrc
@@ -53,7 +53,9 @@ hardstatus on
 
 # Derived from Red Hat's normal status line.
 # includes session name thanks to backtick 10
-hardstatus string "[screen %n%?: %t%? (%10`)%?%P *** Hacker's treasure zoo ***%?] %h"
+hardstatus string "[screen %n%?: %t%? (%10`)] %h"
+# %P doesn't work
+## hardstatus string "[screen %n%?: %t%? (%10`)%?%P *** Hacker's treasure zoo ***%?] %h"
 # %S is session name on version 4.1.0 (squeeze has v4.0.3)
 ## hardstatus string "[screen %n%?: %t%? (%S)] %h"
 # %f is supposed to show flags of the window, but doesn't work on squeeze
