Updates to sources.list etc. for various Debian releases
Added misc/README.md

misc/Makefile: no longer installs hashpw (see https://github.com/unixnut/hashpw)

Added userconfig/standard_dotfiles/.vim/ftplugin/debchangelog.vim
  + key bindings for debchangelog.vim plugin

== userconfig/standard_dotfiles/.init ==

userconfig/standard_dotfiles/.init/setup.d/user.sh:
  + Sets `IP_FORCE_COLOUR_OPT`

userconfig/standard_dotfiles/.init/shellrc.d/useful_aliases.sh:
  + `ipaddr` and `iproute` pretty output functions


git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@404 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.gnomerc
+++ b/.gnomerc
@@ -8,6 +8,9 @@ if [ -z "$GDMSESSION" ] ; then
   . .init/setup.sh
 fi
 
+xmodmap -e 'keysym Super_L = Insert' -e 'clear mod4'
+
+
 # vim: set filetype=sh :
 ### Local Variables:
 ### mode: shell-script
