New tweaks for .gitconfig including .gitignore_global
git-svn-id: svn+ssh://al.id.au/srv/svn/tools/userconfig/standard_dotfiles@408 6f3dbf8f-7d3b-0410-9ec1-89cb43d465ab

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,20 @@
 [user]
-	name = Alastair Irvine
-	email = alastair@plug.org.au
+  name = Alastair Irvine
+  email = alastair@plug.org.au
 [core]
         pager = less -R
+        excludesfile = /home/alastair/.gitignore_global
 [color]
-	diff = auto
-	status = auto
-	branch = auto
+        diff = auto
+        status = auto
+        branch = auto
+[advice]
+        pushNonFastForward = false
+        statusHints = false
+[diff]
+        renames = copies
+        mnemonicprefix = true
+[merge]
+        stat = true
+[pager]
+        branch = false
